--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,13 @@
 elpa/
-
 auto-save-list/
-
 .cache/
-
 transient/
-
 recentf
-
 elpy/
-
 tramp
-
 myinit.el
-
 myinit.org_archive
-
 quelpa/
-
 org/
-
 myinit.el
+.lsp-session-v1
